--- a/index.html
+++ b/index.html
@@ -4,17 +4,24 @@
     <meta charset="utf-8" />
     <title>Phone Store</title>
 
-    <link rel="stylesheet" href="header.css" />
+    <link rel="stylesheet" href="css/container-store.css" />
+    <link rel="stylesheet" href="css/header-store.css" />
+    <link rel="stylesheet" href="css/button-store.css" />
   </head>
   <body>
-    <header>
-      <h1>Logo</h1>
+    <div class="container-store">
+      <header class="header-store">
+        <h1 class="title">Logo</h1>
 
-      <nav>
-        <a href="#">Produtos</a>
-        <a href="#">Serviços</a>
-        <a href="#">Carrinho (10)</a>
-      </nav>
-    </header>
+        <nav class="navigation">
+          <a class="actions" href="#">Produtos</a>
+          <a class="actions" href="#">Serviços</a>
+          <a class="actions" href="#">Carrinho (10)</a>
+        </nav>
+      </header>
+      <main>
+        <button class="button-store">Comprar</button>
+      </main>
+    </div>
   </body>
 </html>
