--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
         </nav>
       </header>
       <main>
-        <button class="button-store">Comprar</button>
+        <button class="button-store -add-cart">Adicionar Carrinho</button>
+        <button class="button-store -buy">Comprar</button>
       </main>
     </div>
   </body>
