Refactoring description product

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="css/container-store.css" />
     <link rel="stylesheet" href="css/header-store.css" />
     <link rel="stylesheet" href="css/phone.css" />
-    <link rel="stylesheet" href="css/desciption-list.css" />
+    <link rel="stylesheet" href="css/desciption-product.css" />
     <link rel="stylesheet" href="css/button-store.css" />
   </head>
   <body>
@@ -30,7 +30,7 @@
         </nav>
       </header>
       <main>
-        <dl class="description-list">
+        <dl class="description-product">
           <div class="phone">
             <img
               class="img-phone"
@@ -39,29 +39,29 @@
             />
           </div>
 
-          <dt class="description-title">Fone top, feliz e caro</dt>
-          <dd class="description-avaliation">4.0 (97)</dd>
-          <section class="delivery">
-            <dd class="description-delivery">FRETE</dd>
-            <dd class="description-delivery-amount">C$ 108</dd>
+          <dt class="title">Fone top, feliz e caro</dt>
+          <dd class="avaliation">4.0 (97)</dd>
+          <section class="description-delivery">
+            <dd class="delivery">FRETE</dd>
+            <dd>C$ 108</dd>
           </section>
-          <section class="price-delivery">
-            <dd class="description-price">PREÇO</dd>
-            <dd class="description-amount">C$ 340</dd>
+          <section class="description-price">
+            <dd class="price">PREÇO</dd>
+            <dd>C$ 340</dd>
           </section>
-          <dd class="description-text">
+          <dd class="text">
             Fone TOP com um cor feliz que não tem fio. A cor também é algo que
             impressiona junto com o seu layout moderno! Ele é caro? É! Mas
             compre que você não vai se arrepender e se você se arrepender pode
             vender no mercado livre..kkkk
           </dd>
-          <dd class="description-more">
-            <a href="#">Saber mais...</a>
+          <dd class="more">
+            <a class="action" href="#">Saber mais...</a>
           </dd>
-          <dd class="description-add-cart">
+          <dd class="add-cart">
             <button class="button-store -add-cart">Adicionar Carrinho</button>
           </dd>
-          <dd class="description-buy">
+          <dd class="buy">
             <button class="button-store -buy">Comprar</button>
           </dd>
         </dl>
