--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
     <div class="container-store">
       <header class="header-store">
         <h1 class="title">Logo</h1>
-
         <nav class="navigation">
+          <input class="search" type="search" placeholder="Busca" />
           <a class="actions" href="#">Produtos</a>
           <a class="actions" href="#">Serviços</a>
           <a class="actions" href="#">Carrinho (10)</a>
@@ -41,15 +41,13 @@
         </figure>
         <dl class="description-product">
           <dt class="title">Fone top, feliz e caro</dt>
-
-          <div class="stars">
-            <img class="star" src="assets/star-fill.png" alt="Star" />
-            <img class="star" src="assets/star-fill.png" alt="Star" />
-            <img class="star" src="assets/star-fill.png" alt="Star" />
-            <img class="star" src="assets/star-fill.png" alt="Star" />
-            <img class="star" src="assets/star-unfill.png" alt="Star" />
-          </div>
-
+          <dd class="stars">
+            <img class="star" src="assets/star-fill.png" alt="Estrela" />
+            <img class="star" src="assets/star-fill.png" alt="Estrela" />
+            <img class="star" src="assets/star-fill.png" alt="Estrela" />
+            <img class="star" src="assets/star-fill.png" alt="Estrela" />
+            <img class="star" src="assets/star-unfill.png" alt="Estrela" />
+          </dd>
           <dd class="avaliation">4.0 (97)</dd>
           <section class="description-delivery">
             <dd class="delivery">FRETE</dd>
@@ -68,11 +66,12 @@
           <dd class="more">
             <a class="action" href="#">Saber mais...</a>
           </dd>
+          <div class="container-buttons">
+            <button class="button-store -add-cart">Adicionar Carrinho</button>
+            <button class="button-store -buy">Comprar</button>
+          </div>
+        </main>
         </dl>
-
-        <button class="button-store -add-cart">Adicionar Carrinho</button>
-        <button class="button-store -buy">Comprar</button>
-      </main>
     </div>
   </body>
 </html>
