--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <header class="header-store">
         <h1 class="title">Logo</h1>
         <nav class="navigation">
-          <input class="search" type="search" placeholder="Busca" />
+          <input class="search" type="search" placeholder="Buscar" />
           <a class="actions" href="#">Produtos</a>
           <a class="actions" href="#">Serviços</a>
           <a class="actions" href="#">Carrinho (10)</a>
