Class 11 challanges done :D

--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
   <head>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta charset="utf-8" />
     <title>Phone Store</title>
 
@@ -21,58 +23,60 @@
     <link rel="stylesheet" href="css/button-store.css" />
   </head>
   <body>
-    <div class="container-store">
-      <header class="header-store">
-        <h1 class="title">Logo</h1>
-        <nav class="navigation">
-          <input class="search" type="search" placeholder="Buscar" />
-          <a class="actions" href="#">Produtos</a>
-          <a class="actions" href="#">Serviços</a>
-          <a class="actions" href="#">Carrinho (10)</a>
-        </nav>
-      </header>
-      <main>
-        <figure class="photo-product">
-          <img
-            class="phonePNG"
-            src="assets/fone-1x.png"
-            alt="Headset Vermelho"
-          />
-        </figure>
-        <dl class="description-product">
-          <dt class="title">Fone top, feliz e caro</dt>
-          <dd class="heart"><img src="assets/heart.png" alt="Coração"></dd>
-          <dd class="stars">
-            <img class="star" src="assets/star-fill.png" alt="Estrela" />
-            <img class="star" src="assets/star-fill.png" alt="Estrela" />
-            <img class="star" src="assets/star-fill.png" alt="Estrela" />
-            <img class="star" src="assets/star-fill.png" alt="Estrela" />
-            <img class="star" src="assets/star-unfill.png" alt="Estrela" />
-          </dd>
-          <dd class="avaliation">4.0 (97)</dd>
-          <section class="description-delivery">
-            <dd class="delivery">FRETE</dd>
-            <dd>C$ 108</dd>
-          </section>
-          <section class="description-price">
-            <dd class="price">PREÇO</dd>
-            <dd>C$ 340</dd>
-          </section>
-          <dd class="text">
-            Fone TOP com um cor feliz que não tem fio. A cor também é algo que
-            impressiona junto com o seu layout moderno! Ele é caro? É! Mas
-            compre que você não vai se arrepender e se você se arrepender pode
-            vender no mercado livre..kkkk
-          </dd>
-          <dd class="more">
-            <a class="action" href="#">Saber mais...</a>
-          </dd>
-          <div class="container-buttons">
-            <button class="button-store -add-cart">Adicionar Carrinho</button>
-            <button class="button-store -buy">Comprar</button>
-          </div>
+    <div id="grad">
+      <div class="container-store">
+        <header class="header-store">
+          <h1 class="title">Logo</h1>
+          <nav class="navigation">
+            <input class="search" type="search" placeholder="Buscar" />
+            <a class="actions" href="#">Produtos</a>
+            <a class="actions" href="#">Serviços</a>
+            <a class="actions" href="#">Carrinho (10)</a>
+          </nav>
+        </header>
+        <main>
+          <figure class="photo-product">
+            <img
+              class="phonePNG"
+              src="assets/fone-1x.png"
+              alt="Headset Vermelho"
+            />
+          </figure>
+          <dl class="description-product">
+            <dt class="title">Fone top, feliz e caro</dt>
+            <dd class="heart"><img src="assets/heart.png" alt="Coração" /></dd>
+            <dd class="stars">
+              <img class="star" src="assets/star-fill.png" alt="Estrela" />
+              <img class="star" src="assets/star-fill.png" alt="Estrela" />
+              <img class="star" src="assets/star-fill.png" alt="Estrela" />
+              <img class="star" src="assets/star-fill.png" alt="Estrela" />
+              <img class="star" src="assets/star-unfill.png" alt="Estrela" />
+            </dd>
+            <dd class="avaliation">4.0 (97)</dd>
+            <section class="description-delivery">
+              <dd class="delivery">FRETE</dd>
+              <dd>C$ 108</dd>
+            </section>
+            <section class="description-price">
+              <dd class="price">PREÇO</dd>
+              <dd>C$ 340</dd>
+            </section>
+            <dd class="text">
+              Fone TOP com um cor feliz que não tem fio. A cor também é algo que
+              impressiona junto com o seu layout moderno! Ele é caro? É! Mas
+              compre que você não vai se arrepender e se você se arrepender pode
+              vender no mercado livre..kkkk
+            </dd>
+            <dd class="more">
+              <a class="action" href="#">Saber mais...</a>
+            </dd>
+            <div class="container-buttons">
+              <button class="button-store -add-cart">Adicionar Carrinho</button>
+              <button class="button-store -buy">Comprar</button>
+            </div>
+          </dl>
         </main>
-        </dl>
+      </div>
     </div>
   </body>
 </html>
