Class 13 challenges 1, 2 and 3

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <link rel="stylesheet" href="css/container-store.css" />
     <link rel="stylesheet" href="css/header-store.css" />
     <link rel="stylesheet" href="css/photo-product.css" />
-    <link rel="stylesheet" href="css/desciption-product.css" />
+    <link rel="stylesheet" href="css/description-product.css" />
     <link rel="stylesheet" href="css/button-store.css" />
   </head>
   <body>
@@ -30,7 +30,7 @@
           <input class="search" type="search" placeholder="Buscar" />
           <a class="actions" href="#">Produtos</a>
           <a class="actions" href="#">Serviços</a>
-          <a class="actions" href="#">Carrinho (10)</a>
+          <a class="actions" href="#" data-cart>Carrinho (10)</a>
         </nav>
       </header>
       <main>
@@ -76,5 +76,7 @@
         </dl>
       </main>
     </div>
+    <script src="src/description-products.js"></script>
+    <script src="src/home.js"></script>
   </body>
 </html>
