--- a/index.html
+++ b/index.html
@@ -43,12 +43,19 @@
         </figure>
         <dl class="description-product">
           <dt class="title">Fone top, feliz e caro</dt>
-          <dd class="heart"><img src="assets/heart.png" alt="Coração" /></dd>
+          <dd class="hearts">
+            <img class="heart" src="assets/heart.png" alt="Coração" />
+            <img
+              class="heart -active"
+              src="assets/heart-active.png"
+              alt="Coração"
+            />
+          </dd>
           <dd class="stars">
-            <img class="star" src="assets/star-fill.png" alt="Estrela" />
-            <img class="star" src="assets/star-fill.png" alt="Estrela" />
-            <img class="star" src="assets/star-fill.png" alt="Estrela" />
-            <img class="star" src="assets/star-fill.png" alt="Estrela" />
+            <img class="star" src="assets/star-unfill.png" alt="Estrela" />
+            <img class="star" src="assets/star-unfill.png" alt="Estrela" />
+            <img class="star" src="assets/star-unfill.png" alt="Estrela" />
+            <img class="star" src="assets/star-unfill.png" alt="Estrela" />
             <img class="star" src="assets/star-unfill.png" alt="Estrela" />
           </dd>
           <dd class="avaliation">4.0 (97)</dd>
