Mudando apenas uma estrela

--- a/index.html
+++ b/index.html
@@ -52,11 +52,48 @@
             />
           </dd>
           <dd class="stars">
-            <img class="star" src="assets/star-unfill.png" alt="Estrela" />
-            <img class="star" src="assets/star-unfill.png" alt="Estrela" />
-            <img class="star" src="assets/star-unfill.png" alt="Estrela" />
-            <img class="star" src="assets/star-unfill.png" alt="Estrela" />
-            <img class="star" src="assets/star-unfill.png" alt="Estrela" />
+            <ol>
+              <li class="star">
+                <img class="starPNG" src="assets/star.png" alt="Estrela" />
+                <img
+                  class="starPNG -active"
+                  src="assets/star-active.png"
+                  alt="Estrela"
+                />
+              </li>
+              <li class="star">
+                <img class="starPNG" src="assets/star.png" alt="Estrela" />
+                <img
+                  class="starPNG -active"
+                  src="assets/star-active.png"
+                  alt="Estrela"
+                />
+              </li>
+              <li class="star">
+                <img class="starPNG" src="assets/star.png" alt="Estrela" />
+                <img
+                  class="starPNG -active"
+                  src="assets/star-active.png"
+                  alt="Estrela"
+                />
+              </li>
+              <li class="star">
+                <img class="starPNG" src="assets/star.png" alt="Estrela" />
+                <img
+                  class="starPNG -active"
+                  src="assets/star-active.png"
+                  alt="Estrela"
+                />
+              </li>
+              <li class="star">
+                <img class="starPNG" src="assets/star.png" alt="Estrela" />
+                <img
+                  class="starPNG -active"
+                  src="assets/star-active.png"
+                  alt="Estrela"
+                />
+              </li>
+            </ol>
           </dd>
           <dd class="avaliation">4.0 (97)</dd>
           <section class="description-delivery">
