--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
         <h1 class="title">Logo</h1>
         <nav class="navigation">
           <input class="search" type="search" placeholder="Buscar" />
+          <img class="searchSVG" src="./assets/search.svg" alt="Busca" />
+          <img class="closeSVG" src="./assets/close.svg" alt="Fechar busca" />
           <a class="actions" href="#">Produtos</a>
           <a class="actions" href="#">Serviços</a>
           <a class="actions" href="#" data-cart>Carrinho (10)</a>
@@ -122,5 +124,6 @@
     </div>
     <script src="src/description-products.js"></script>
     <script src="src/home.js"></script>
+    <script src="src/header-store.js"></script>
   </body>
 </html>
