--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
       </header>
       <main>
         <figure class="photo-product">
+          <div class="baia"></div>
           <img class="phonePNG" src="assets/fone.png" alt="Headset Vermelho" />
         </figure>
         <dl class="description-product">
