--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <header class="header-store">
         <h1 class="title">Logo</h1>
         <nav class="navigation">
-          <form class="input-search -active">
+          <form class="input-search">
             <input
               class="content"
               type="search"
